--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-mangum
-pydantic
-supabase
+fastapi>=0.100.0
+uvicorn>=0.23.0
+mangum>=0.17.0
+pydantic>=2.0.0
+supabase>=2.0.0
 python-multipart
-openai
+openai>=1.0.0
