--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi>=0.100.0
+fastapi==0.103.1
 uvicorn>=0.23.0
-mangum>=0.17.0
+mangum==0.17.0
 pydantic>=2.0.0
-supabase>=2.0.0
+supabase==2.0.3
 python-multipart
-openai>=1.0.0
+openai==1.3.5
